methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:29: error: ':' expected but '(' found.
override def run(ligne()
                      ^FlowerCase:30: error: identifier expected but ';' found.
droite();avance();gauche();recule(8);droite();avance(3);gauche()
        ^FlowerCase:31: error: ';' expected but ')' found.
      ligne()) 
             ^